Fix gap, reorganised files

--- a/src/App.css
+++ b/src/App.css
@@ -2,393 +2,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 .App {
-  /* background-color: black; */
-  /* height: 100vh;
-  width: 100vw; */
   text-align: center;
-  /* position: fixed; */
-}
-
-.heading-holder {
-  width: 341.3px;
-  margin: auto;
-}
-
-.App h1 {
-  color: white;
-  text-shadow: green;
   font-family: "Quicksand", sans-serif;
-  font-weight: 500;
-  font-size: 80px;
-  text-align: center;
 }
 
-.neon {
-  position: absolute;
-  margin-top: 0;
-  padding: 0 20px;
-  text-shadow: 0 0 10px rgb(0, 122, 0);
-}
-
-.neon::after {
-  content: attr(data-text);
-  position: absolute;
-  top: 0;
-  left: 0;
-  padding: 0 20px;
-  z-index: -1;
-  color: rgb(0, 122, 0);
-  filter: blur(10px);
-}
-
-.neon::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -2;
-  color: rgb(0, 122, 0);
-  filter: blur(8px);
-  background: rgba(6, 61, 6, 0.548);
-  opacity: 0.5;
-  filter: blur(40);
-}
-
-/* /////////////////////////////////// */
-
-/* .card {
-  padding-top: 200px;
-}
-
-.details {
-  position: relative;
-  margin: auto;
-  width: 300px;
-  height: 400px;
-  background-color: rgb(206, 255, 196);
-  box-shadow: 00px 0px 40px rgba(245, 243, 243, 0.445);
-}
-
-.imgSide {
-  position: relative;
-  margin: auto;
-  width: 300px;
-  height: 400px;
-  background-color: rgb(206, 255, 196);
-  box-shadow: 00px 0px 40px rgba(245, 243, 243, 0.445);
-} */
-
-.flip-book-section {
+h2 {
   color: white;
-  padding-top: 250px;
-  margin-bottom: 250px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-family: "Roboto", sans-serif;
-}
-
-input {
-  display: none;
-}
-
-.flip-book-section img {
-  width: 100%;
-  height: 80%;
-}
-
-.flip-book-section {
-  display: flex;
-}
-
-#cover {
-  width: 250px;
-  height: 400px;
-  background-color: rgb(201, 137, 137);
-  color: rgb(56, 56, 49);
-}
-
-.flip-book {
-  width: 250px;
-  height: 400px;
-  position: relative;
-  perspective: 1500px;
-}
-
-.flip {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  transform-origin: left;
-  transform-style: preserve-3d;
-  transform: rotateY(0deg);
-  transition: 0.5s;
-}
-
-.front {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background-color: rgb(3, 3, 3);
-  box-sizing: border-box;
-  padding: 0 13px;
-  box-shadow: inset 20px 0 50px rgba(0, 0, 0, 0.5) inset 20px 0 50px
-    rgba(0, 0, 0, 0.5);
-}
-
-p {
-  font-size: 1rem;
-  font-weight: 500;
-}
-
-.back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: 99;
-  transform: rotateY(180deg);
-  backface-visibility: hidden;
-  background: rgb(15, 15, 15);
-}
-
-.next-btn {
-  /* background-color: white; */
-  position: absolute;
-  bottom: 13px;
-  right: 13px;
-  padding: 10px;
-  cursor: pointer;
-  color: rgb(0, 122, 0);
-}
-
-.back-btn {
-  position: absolute;
-  bottom: 13px;
-  right: 13px;
-  cursor: pointer;
-  color: rgb(0, 122, 0);
-  /* display: none; */
-}
-
-#p1 {
-  z-index: 6;
-}
-
-#p2 {
-  z-index: 5;
-}
-
-#p3 {
-  z-index: 4;
-}
-
-#p4 {
-  z-index: 3;
-}
-
-#p5 {
-  z-index: 2;
-}
-
-#p6 {
-  z-index: 1;
-}
-
-#c1:checked ~ .flip-book #p1 {
-  transform: rotateY(-180deg);
-  z-index: 1;
-}
-
-#c2:checked ~ .flip-book #p2 {
-  transform: rotateY(-180deg);
-  z-index: 2;
-}
-
-#c3:checked ~ .flip-book #p3 {
-  transform: rotateY(-180deg);
-  z-index: 3;
-}
-
-#c4:checked ~ .flip-book #p4 {
-  transform: rotateY(-180deg);
-  z-index: 4;
-}
-
-#c5:checked ~ .flip-book #p5 {
-  transform: rotateY(-180deg);
-  z-index: 5;
-}
-
-#c6:checked ~ .flip-book #p6 {
-  transform: rotateY(-180deg);
-  z-index: 6;
-}
-
-#chickenSaying {
-  color: rgb(27, 23, 23);
-  position: relative;
-  opacity: 0;
-}
-
-#chickenSaying span {
-  position: relative;
-  font-size: 1.5rem;
-  z-index: 22;
-}
-
-.dialog-1 {
-  height: 100px;
-  width: 100px;
-  background-color: white;
-  position: absolute;
-  left: 10%;
-  border-radius: 10%;
-  z-index: 21;
-}
-
-.left-point {
-  width: 0;
-  height: 0;
-  border-left: 10px solid transparent;
-  border-right: 10px solid transparent;
-  border-top: 70px solid white;
-  position: absolute;
-  top: 45%;
-  left: -20%;
-  transform: rotate(60deg);
-  z-index: 21;
-}
-
-#finalBtn {
-  visibility: hidden;
-}
-
-#finalSaying {
-  visibility: hidden;
-}
-
-#sadFace {
-  visibility: hidden;
-}
-
-.caption {
-  font-weight: 600;
-  font-size: 1rem;
-}
-
-/* /////////////////////////////////// */
-
-#project-section {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  min-height: 100vh;
-}
-
-.box {
-  position: relative;
-  width: 300px;
-  height: 300px;
-  display: flex;
-  justify-self: center;
-  align-items: center;
-  margin: 40px;
-  background: #060c21;
-  transition: 0.5s;
-}
-
-.box:hover {
-  height: 400px;
-}
-
-.box .imgBx {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  width: 100%;
-  height: 100%;
-  padding: 10px;
-  box-sizing: border-box;
-}
-
-.box .imgBx img {
-  max-width: 100%;
-  opacity: 0.3;
-  transition: 0.5s;
-}
-
-.box:hover .imgBx img {
-  opacity: 1;
-}
-
-.box:before {
-  content: "";
-  position: absolute;
-  top: -2px;
-  left: -2px;
-  right: -2px;
-  bottom: -2px;
-  background: #fff;
-  z-index: -1;
-}
-
-.box:after {
-  content: "";
-  position: absolute;
-  top: -2px;
-  left: -2px;
-  right: -2px;
-  bottom: -2px;
-  background: #fff;
-  z-index: -2;
-  filter: blur(40px);
-}
-
-.box:before,
-.box:after {
-  background: linear-gradient(235deg, #8be479, #010615, #fa6565);
-}
-
-.box:nth-child(2):before,
-.box:nth-child(2):after {
-  background: linear-gradient(235deg, #804bfd, #010615, #f3e075);
-}
-
-.box:nth-child(3):before,
-.box:nth-child(3):after {
-  background: linear-gradient(235deg, #fab668, #010615, #0075d4);
-}
-
-.box .content {
-  position: absolute;
-  bottom: 0;
-  left: 10px;
-  right: 10px;
-  bottom: 10px;
-  height: 90px;
-  background: rgba(0, 0, 0, 0.5);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  opacity: 0;
-  transition: 0.5s;
-}
-
-.box:hover .content {
-  opacity: 1;
-}
-
-.box:hover .content h2 {
-  font-size: 20px;
-  color: #fff;
+  font-weight: 700;
+  font-size: 2rem;
+  text-shadow: 1px 1px #8be479;
 }
